--- a/backend/user-service/pom.xml
+++ b/backend/user-service/pom.xml
@@ -100,6 +100,15 @@
 
 
 
+		<!--            postgreSql-->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.2</version>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
